--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongodb": "^6.8.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
